Minor edits while looking around designs. The force code now records ADC status in a variable.

--- a/test_stand_force_design/Force_Sensor_Board.PcbDoc.htm
+++ b/test_stand_force_design/Force_Sensor_Board.PcbDoc.htm
@@ -126,17 +126,17 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">1/6/2019</td>
+            <td class="front_matter_column3">1/26/2019</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">2:27:28 PM</td>
+            <td class="front_matter_column3">7:23:34 PM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_valve_design\valve_module.PcbDoc" class="file"><acronym title="C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_valve_design\valve_module.PcbDoc">C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_valve_design\valve_module.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_force_design\Force_Sensor_Board.PcbDoc" class="file"><acronym title="C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_force_design\Force_Sensor_Board.PcbDoc">C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\test_stand_force_design\Force_Sensor_Board.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
