Added testpoints for current sense amp outputs, swapped around buttons for better labelling, and tuned testpoint holes to fit Keystone THM Multipurpose testpoints.

--- a/valves/prop_valve_driver/valves_v2/Project Outputs for valves_v2/Design Rule Check - valvePCB.html
+++ b/valves/prop_valve_driver/valves_v2/Project Outputs for valves_v2/Design Rule Check - valvePCB.html
@@ -224,7 +224,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">4:17:14 AM</td>
+<td class="front_matter_column3">2:52:00 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -254,7 +254,7 @@
 <td class="DRC_summary_header_col3" style="color : red">4</td></tr>
 </table>
 </td>
-</table><a name="IDITI4UWP231MJBSFAY4YGOLKE4BI5APY2SJLDLEE1M3YXAGYMR1B"><h2>Summary</h2></a><table>
+</table><a name="IDM4JZPQCD4K5GMBVLXUPZTXSMYGLJ2ITOJU3WBMFZJJ2BBP0RHGBO"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -269,71 +269,71 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDE2YQQJZOI2XXKRTOGUUXQFBVFXIUCXDXN1KK0FOQOKDX5GOUCWN">Clearance Constraint (Gap=8mil) ((OnLayer('Layer 1') OR OnLayer('Layer 2')) AND IsTrack),((OnLayer('Layer 1') OR OnLayer('Layer 2')) AND IsTrack)</a></td>
+<td class="column1"><a href="#IDRBWDPLSZJ2RZBCQ4G4O1KJ3BKG0COKDF4B5ZIEC5AUDMLEYUJBCP">Clearance Constraint (Gap=8mil) ((OnLayer('Layer 1') OR OnLayer('Layer 2')) AND IsTrack),((OnLayer('Layer 1') OR OnLayer('Layer 2')) AND IsTrack)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEX41VRSTBJ43HKRHO4KFLFLYGKXP0F2HVVXXMGDRQ1IHHFALFPYB">Clearance Constraint (Gap=8mil) ((OnLayer('Top Layer') OR OnLayer('Bottom Layer')) AND IsTrack),((OnLayer('Top Layer') OR OnLayer('Bottom Layer')) AND IsTrack)</a></td>
+<td class="column1"><a href="#IDHB15ALPDY2VQDSWKTGSV4H00QNEG1UBATKTWJ4MHHS0IXROFDT1J">Clearance Constraint (Gap=8mil) ((OnLayer('Top Layer') OR OnLayer('Bottom Layer')) AND IsTrack),((OnLayer('Top Layer') OR OnLayer('Bottom Layer')) AND IsTrack)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDZF4A44J2GTDHOQCPVJXLCHB44FAY40JG3MDJS2DU5OHMSO2GN4FF">Clearance Constraint (Gap=8mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDJ41ZWDTH5YU3DUWM2GOZD2SZKHSOBXPSO2WIVSIJQGC1L1TMUKCL">Clearance Constraint (Gap=8mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDASGAOVNQF51UB5LTXBQJSV1W4C0OLZWED0HZB2EXCQNT5ZFWNG">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDO24OXTHH3B5YLCDHGZLPYOTTVHX3JIPHIWGJZEEOAYN3LNJVAE3F">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDKJ3AJ5HHEGZPGIHM0KGQVOCXKEUDX3FWOZXIZNM1F5RV45OV13GO">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDODVPDFJSS0SIQHK0EGSV1JQWIQG4QNMH22OITJXNSWG2AICMJKP">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVTZEXI0BEXG3ONCRERTDULTGEE3GQMQ5RKWTV2POTPZTP434NF1">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDJVL3FZHD4TEULXH2QWB2XA2UCMKKU40TONXMCEPAL4LVA0QYPYBP">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVQCGS42IXWQYICXPEGLYX0RWWOT3AG4ZAVBM2UN153UPY1RMXBCP">Width Constraint (Min=5mil) (Max=100mil) (Preferred=10mil) (All)</a></td>
+<td class="column1"><a href="#IDUIQMHMN0FLHJI0XQUF2FZAIIMNLGQA2IBCTDNHFUD1TWH1H0L3XP">Width Constraint (Min=5mil) (Max=100mil) (Preferred=10mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDQM2T1QEU5FUPIUCSLEAOROWUZHLUDV5EBVKC5PPJTOCACSYLQJCL">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDEEQXOSVNRJMGIM5FHF50PQTU1EJIJ1FRBZCY2XIEJ5VPVRZMRAZL">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID1S4HLPDX15RRF2B5KYDVZFXS4EJKQPBFXEMNYTHXMGLDHV5TZFVO">Hole Size Constraint (Min=7.874mil) (Max=248.031mil) (All)</a></td>
+<td class="column1"><a href="#IDBPSBP5O4JWKMC3E4YASD5TH435WUQTWTVTY3UHRASZJEHSCH5C">Hole Size Constraint (Min=7.874mil) (Max=248.031mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDUZ0HGPANL23ACIJOOS41VS2NHFKRZVLK2FVQCUOFL0UHHOPI4JCG">Hole To Hole Clearance (Gap=10mil) (IsVia),(IsVia)</a></td>
+<td class="column1"><a href="#IDXIWLAKRKPWD1PTCA3OOYAUIHZH0LGDEDVKUDNPE4TW4GFLMY32AL">Hole To Hole Clearance (Gap=10mil) (IsVia),(IsVia)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDODOPKUBPASDRO2CAUYU0Y10GHGXKENSP5GK24BGHPYDBF2KSUEL">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDVCGSGDZW4KG5I45VDMX2RXAP4NUQO5ZV12GS1BGXXMR2IDLBCJPF">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3INJPWMSACK1N142UEQJYZQ1G4LYG0KZLEN3QBXQ2HUKJNSJYVD">Minimum Solder Mask Sliver (Gap=8mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDCDPSSZUZXGENNTEPRN4ABWL25EVF2MC3ESQMFIKVYULMWOF02VZN">Minimum Solder Mask Sliver (Gap=8mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDCAKHVD23S1WOKUXKBEBMAVNHYIFN3SZN5FJE2GCW50N0R0CK2Z5E">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
+<td class="column1"><a href="#ID0NAWJ4F5PYE4FXW0GA10DZSSXF4EMXPTN30W5UW5S3PWFHLS0YI">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTLMNPUE3Z2I1KVEW1FO31DQN3CJXYPYE3MYXQPGXXAZGT2XM45FG">Silk to Silk (Clearance=5.906mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDG1RADAKPDKA5JLZZFRXQXFC0IR4V54B15FDXX2R0QADRRKIOFC">Silk to Silk (Clearance=5.906mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDKIUB0LBY0F2AJNPCEMM43ED4UCJOT3DDZ4TZ1HNHT2XV4QZ2LIRL">Net Antennae (Tolerance=0mil) (All)</a></td>
+<td class="column1"><a href="#IDEAVFASU30REBILASX1VAQ1IEDCLPPVAZCGXMXFGWRR03V3W4K4AL">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3EI4UZIRNKPVP5WHJWDXCATVTMGGOVRSZSFI45HN4TTGILTWDTJP">Board Clearance Constraint (Gap=0mil) (All)</a></td>
+<td class="column1"><a href="#IDYG2J5CHTCWZFDFLORNLKIFH15KW1S0AZ1VTS0ICPDCZLNPJCKIQN">Board Clearance Constraint (Gap=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID21GE0I5GURXBMYI0OBE4N0KSGJZ2EP0Q2DFPCQGPX5GJ2JJK0KCK">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
+<td class="column1"><a href="#IDATVMJMWKHAQVE4TSL55PAY0P1KGQOFITXG5UGPM3RROEVNPDX10L">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
@@ -346,18 +346,18 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDFVHKCONWR4WABOQKNTL3DJYD4HKV0SVZUXBZY1MY2C5NE4UEC0XK">Clearance Constraint (Gap=8mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDVH154NDKU05EPS3GFEU52QOIAO5YSLUD10CBCBHDHHD5K2P3LW4L">Clearance Constraint (Gap=8mil) (All),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMQAYJPNX3VHUOWYNYULJC4YHTGWORR32ODU3YZJIPKDXSE2DUOYH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDC1AKC5DOPJISFOK0BYTUWC4XFN5P0ILIJ5ABOGFTX2CRCGQRK4RN">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
 <td style="font-weight : bold" class="column2">4</td>
 </tr>
-</table><br><a name="IDV52IU4IGM1NFBCYYAEUE1K3WUN4G2HPPAQX2WJIUABZLI0THZVRF"><h2>Rule Violations</h2></a><a name="IDWBIFGVZ4D0MEI5Y3UITWMOHQCEKUMD0NMEYEBWGYJT1UTKTEWPFB"><h2>Waived Violations</h2></a><a name="IDFVHKCONWR4WABOQKNTL3DJYD4HKV0SVZUXBZY1MY2C5NE4UEC0XK"><table>
+</table><br><a name="ID1DOKHAASNSWRBAUP1EC4BRKJFJVQAP4NWW2CF3BKCGZOEZUCMSLB"><h2>Rule Violations</h2></a><a name="IDLVWOYHALGSOLNMGTSVQXDVUZCHCDEIXU1V3SWYMAAZ0X52SUEV0K"><h2>Waived Violations</h2></a><a name="IDVH154NDKU05EPS3GFEU52QOIAO5YSLUD10CBCBHDHHD5K2P3LW4L"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="waived">Clearance Constraint (Gap=8mil) (All),(All)</th>
 </tr>
@@ -367,7 +367,7 @@
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\valves\prop_valve_driver\valves_v2\valvePCB.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3628.739mil|Location2.X=3635.072mil|Location1.Y=4054.833mil|Location2.Y=4061.167mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\julli\OneDrive - California Institute of Technology\PARSEC\avionics\valves\prop_valve_driver\valves_v2\valvePCB.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3628.739mil|Location2.X=3635.072mil|Location1.Y=4054.833mil|Location2.Y=4061.167mil|Absolute=True">Clearance Constraint: (Collision &lt; 8mil) Between Area Fill (990mil,1040mil) (1320mil,1270mil) on Layer 2 And Pad J2-3(1231.906mil,1158mil) on Multi-Layer </acronym></a><br>Waived by Julian Sanders at 4/9/2021 1:27:18 AM<br>Connection between MGND and DGND</td>
 </tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDMQAYJPNX3VHUOWYNYULJC4YHTGWORR32ODU3YZJIPKDXSE2DUOYH"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDC1AKC5DOPJISFOK0BYTUWC4XFN5P0ILIJ5ABOGFTX2CRCGQRK4RN"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="waived">Short-Circuit Constraint (Allowed=No) (All),(All)</th>
 </tr>
